<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.main.fragments.home.HomeFragment"
        android:label="@string/fragment_home_label"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_activityByDayFragment"
            app:destination="@id/activityByDayFragment" />
    </fragment>
    <fragment
        android:id="@+id/videosFragment"
        android:name="com.example.main.fragments.videos.VideosFragment"
        android:label="@string/fragment_videos_label"
        tools:layout="@layout/fragment_videos" />
    <fragment
        android:id="@+id/eventsFragment"
        android:name="com.example.main.fragments.events.EventsFragment"
        android:label="@string/fragment_events_label"
        tools:layout="@layout/fragment_events" />
    <fragment
        android:id="@+id/chatsFragment"
        android:name="com.example.main.fragments.chats.ChatsFragment"
        android:label="@string/fragment_chats_label"
        tools:layout="@layout/fragment_chats" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.main.fragments.profile.ProfileFragment"
        android:label="@string/fragment_profile_label"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/activityByDayFragment"
        android:name="com.example.main.fragments.activity_by_day.ActivityByDayFragment"
        android:label="@string/fragment_activity_by_day_label"
        tools:layout="@layout/fragment_activity_by_day" />
</navigation>