<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/ThemeOverlay.AddMealDialog"
    android:padding="@dimen/_24dp">

    <TextView
        android:id="@+id/text_view_nutrition_dialog_title"
        style="@style/Healthy.Text.H5.Semibold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_nutrition_title"
        app:layout_constraintBottom_toBottomOf="@id/image_view_nutrition_dialog_icon"
        app:layout_constraintEnd_toStartOf="@+id/image_view_nutrition_dialog_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_view_nutrition_dialog_icon" />

    <ImageView
        android:id="@+id/image_view_nutrition_dialog_icon"
        android:layout_width="@dimen/_48dp"
        android:layout_height="@dimen/_48dp"
        android:background="@drawable/ic_calories"
        app:backgroundTint="@color/color_nutrition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_view_nutrition_dialog_title"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_meal_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_nutrition_dialog_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_meal_title"
            android:textAppearance="@style/Healthy.Text.H6.Regular" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_meal_calories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_meal_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_calories"
            android:inputType="number"
            android:textAppearance="@style/Healthy.Text.H6.Regular" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/text_input_layout_meal_proteins"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        app:layout_constraintEnd_toStartOf="@+id/text_input_layout_meal_fats"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_meal_calories"
        tools:layout_editor_absoluteY="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_proteins"
            android:inputType="number"
            android:textAppearance="@style/Healthy.Text.H6.Regular" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/text_input_layout_meal_fats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        app:layout_constraintEnd_toStartOf="@+id/text_input_layout_meal_carbs"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_input_layout_meal_proteins"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_meal_calories"
        tools:layout_editor_absoluteY="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_fats"
            android:inputType="number"
            android:textAppearance="@style/Healthy.Text.H6.Regular" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/text_input_layout_meal_carbs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_input_layout_meal_fats"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_meal_calories"
        tools:layout_editor_absoluteY="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_carbs"
            android:inputType="number"
            android:textAppearance="@style/Healthy.Text.H6.Regular" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add_meal_nutrition_dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        android:minHeight="@dimen/_48dp"
        android:text="@string/button_add_text"
        android:textAppearance="@style/Healthy.Text.Button"
        app:backgroundTint="@color/color_nutrition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_meal_proteins" />

</androidx.constraintlayout.widget.ConstraintLayout>