<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_24dp"
    android:theme="@style/ThemeOverlay.AddWaterIntakeDialog">

    <TextView
        android:id="@+id/text_view_water_dialog_title"
        style="@style/Healthy.Text.H5.Semibold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_water_title"
        app:layout_constraintBottom_toBottomOf="@id/image_view_water_dialog_icon"
        app:layout_constraintEnd_toStartOf="@+id/image_view_water_dialog_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_view_water_dialog_icon" />

    <ImageView
        android:id="@+id/image_view_water_dialog_icon"
        android:layout_width="@dimen/_48dp"
        android:layout_height="@dimen/_48dp"
        android:background="@drawable/ic_water"
        app:backgroundTint="@color/color_water"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_view_water_dialog_title"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_water_intake"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_water_dialog_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_water_intake_ml"
            android:inputType="number"
            android:textAppearance="@style/Healthy.Text.H6.Regular"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add_water_intake"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        android:text="@string/button_add_text"
        android:textAppearance="@style/Healthy.Text.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_water_intake" />

</androidx.constraintlayout.widget.ConstraintLayout>